--- a/notebook/2. MODEL TRAINING.ipynb
+++ b/notebook/2. MODEL TRAINING.ipynb
@@ -1,9 +1,7 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "92e48866",
    "metadata": {},
    "source": [
     "## Model Training"
@@ -11,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25791a74",
    "metadata": {},
    "source": [
     "#### 1.1 Import Data and Required Packages\n",
@@ -21,7 +18,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b080dfb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +42,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e45079ad",
    "metadata": {},
    "source": [
     "#### Import the CSV Data as Pandas DataFrame"
@@ -55,7 +50,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e11c6255",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +58,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20634923",
    "metadata": {},
    "source": [
     "#### Show Top 5 Records"
@@ -73,7 +66,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e7e412a2",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +186,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbd32281",
    "metadata": {},
    "source": [
     "#### Preparing X and Y variables"
@@ -203,7 +194,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "56d72fde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +203,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "cd613177",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +318,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f237ea14",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +353,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "924b7f9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +362,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ffc69816",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +393,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1e290fe3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +417,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "9c68f99a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +426,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "72459f1d",
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +446,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ed5c4e99",
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +468,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cd80317",
    "metadata": {},
    "source": [
     "#### Create an Evaluate Function to give all metrics after model Training"
@@ -495,7 +476,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "8c247bd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +490,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "79ccb8e7",
    "metadata": {
     "scrolled": false
    },
@@ -690,7 +669,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06480b5a",
    "metadata": {},
    "source": [
     "### Results"
@@ -699,7 +677,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "e0159e5f",
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +778,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "357a7c1c",
    "metadata": {},
    "source": [
     "## Linear Regression"
@@ -810,7 +786,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "9a6ad559",
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +806,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d31453e",
    "metadata": {},
    "source": [
     "## Plot y_pred and y_test"
@@ -840,7 +814,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "eb557b0a",
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +836,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "1e707ec3",
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +855,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79c2fe28",
    "metadata": {},
    "source": [
     "#### Difference between Actual and Predicted Values"
@@ -892,7 +863,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "7c9a8b48",
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +993,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3acf1fbc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1031,7 +1000,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1045,7 +1014,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
